<resources>
    <string name="app_name">gr09.8 - Simulator til kirurgisk traening</string>
    <string name="afventerForbindelse">Afventer instruktør</string>
    <string name="gasforsyningTitel">Gas Supply</string>
    <string name="trykTitel">Pressure</string>
    <string name="flowrateTitel">Flow Rate</string>
    <string name="volumenTitel">Volume</string>
    <string name="tubeblokeretTekst">Tube Obstructed</string>
    <string name="overtrykTekst">Excessive Pressure</string>
    <string name="Intro_Titel">Kirurgisk Simulator</string>
    <string name="Intro_UnderTitel">Træning af studerende</string>
    <string name="intro_logo">Logo</string>
    <string name="VaelgRolle_Titel">Vælg visning</string>
    <string name="VaelgRolle_InsufflatorTitel">Insufflator visning</string>
    <string name="VaelgRolle_InsufflatorText">Simulerer en aktiv insufflator styret af en instruktør</string>
    <string name="VaelgRolle_InstruktørTitel">Instruktør visning</string>
    <string name="VaelgRolle_InstruktørText">Kontrollerer simulationen. Kan oprette, redigere og starte brugsscenarier</string>
    <string name="vaelg_scenarie_overskrift">Brugsscenarier</string>
    <string name="vaelg_scenarie_knap_nyt_scenarie">Opret nyt</string>
    <string name="scenarie_dummy_navn">Scenarienavn</string>
    <string name="rediger">Rediger</string>
    <string name="slet">Slet</string>
    <string name="VaelgOpgave_Titel">Vælg Opgave</string>
    <string name="VaelgOpgave_BrugsTitel">Brugsscenarier</string>
    <string name="VaelgOpgave_ForbindTabletTitel">Forbind til tablet</string>
    <string name="VaelgOpgave_BrugsText">Opret eller rediger brugsscenarier</string>
    <string name="VaelgOpgave_forbindTabletText">Forbind til tablet og start simulering</string>
    <string name="VaelgTablet_Titel">Vælg Tablet</string>
    <string name="VaelgTablet_OpretNyTabletKnap">Opret ny Tablet</string>
    <string name="VaelgTablet_IndtastNavn">Tablet navn</string>
    <string name="VaelgTablet_KnapForbind">Forbind</string>
    <string name="VaelgTablet_HentResultater">Resultater</string>
    <string name="VaelgTablet_KnapSlet">Slet</string>
    <string name="VaelgTablet_KnapResultater">Resultater</string>
    <string name="title_activity_rediger_aktivitet">redigerAktivitetActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Tablets">Tablets</string>
    <string name="Ny">Ny</string>
    <string name="tablet_liste_element_valgBrugs">Vælg Brugsscenarie</string>
    <string name="tablet_liste_element_selog">Se log</string>
    <string name="tablet_liste_element_slet">Slet</string>
    <string name="btnFunctionValue">Tilføj</string>
    <string name="VaelgTablet_SendTilAlle">Send til alle</string>
    <string name="displays00Placeholder">00</string>
    <string name="trykEnhed">mmHg</string>
    <string name="flowEnhed">L/min</string>
    <string name="volumenEnhed">L</string>
    <string name="adapter_peer_send">SEND</string>
    <string name="adapter_peer_forbind">FORBIND</string>
    <string name="creditsTitel">Udviklet af Gruppe 98</string>
    <string name="creditsTekst">s175210 Peter T. Blendstrup\ns175179 Joachim S. Mortensen\ns143780 Nicolai Kammersgård\ns175447 Hjalte B. Andersen\ns172840 Mette L. B. Andersen</string>
    <string name="spørgsmålstegn">"?" </string>


</resources>
