<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scenarie_navn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scenarie_dummy_navn"
        android:textSize="26sp"
        android:background="@color/colorLightGray"
        app:layout_constraintBottom_toBottomOf="@+id/knap_rediger_scenarie"
        app:layout_constraintEnd_toStartOf="@+id/knap_rediger_scenarie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/knap_rediger_scenarie" />

    <Button
        android:id="@+id/knap_rediger_scenarie"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/colorYellow"
        android:text="@string/rediger"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintBottom_toBottomOf="@+id/knap_slet_scenarie"
        app:layout_constraintEnd_toStartOf="@+id/knap_slet_scenarie"
        app:layout_constraintTop_toTopOf="@+id/knap_slet_scenarie" />

    <Button
        android:id="@+id/knap_slet_scenarie"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorRed"
        android:text="@string/slet"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>